Closed Bug 289289 Opened 21 years ago Closed 21 years ago

using clip-path on a shape causes all subsequent shapes to be cliped

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: holger, Assigned: tor)

References

()

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de-DE; rv:1.7.5) Gecko/20041108 Firefox/1.0 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050404 In the page at http://www.treebuilder.de/svg/magicclippath.svg , the red and blue rects should not be cliped by the circle. in mozilla both rects get cliped. using clip-path on the following shapes triggers the bug: path,line,polyline,polygon using clip-path on the following shapes do not trigger the bug. rect,circle,ellipse Reproducible: Always Steps to Reproduce: 1.create a clipPath 2.apply the clippath to a path 3.add a rect just after the path Actual Results: both the path and the rect get cliped. Expected Results: only the path should be cliped.
Assignee: general → tor
Status: UNCONFIRMED → ASSIGNED
Attachment #179864 - Flags: review?(jonathan.watt)
Comment on attachment 179862 [details] [diff] [review] remove nsSVGPathGeometryFrame::Paint early exit r=jwatt Holger, thanks for the testing and bug reports. :-) I do have one request though: in future could you attach your testcases to the bug? For short lived bugs it doesn't matter so much, but it's good practice.
Attachment #179862 - Flags: review+
Attachment #179864 - Flags: review?(jonathan.watt)
Attachment #179862 - Flags: approval1.8b2?
Comment on attachment 179862 [details] [diff] [review] remove nsSVGPathGeometryFrame::Paint early exit a=mkaply
Attachment #179862 - Flags: approval1.8b2? → approval1.8b2+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
WOW!!!!!!!!!!!!!!!!!!!!!!!!!!! that was quick !!! thanks guys ! > in future could you attach your testcases to the bug ? yes sure, it was the first time i used bugzilla , sorry.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: