Bug 289289 - using clipPath on a markable shape causes all subsequent drawing to be clipped.  r=jwatt, a=mkaply.